--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,10 @@ footer {
   text-align: center;
   padding: 1rem 0;
 }
+
+#hero {
+  background-image: url('https://images.unsplash.com/photo-1518531933037-91b2f5f229cc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bGVhdmVzJTIwYmFja2dyb3VuZHxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80');
+  background-size: cover;
+  background-position: center top;
+  background-attachment: fixed;
+}
