--- a/styles.css
+++ b/styles.css
@@ -98,8 +98,8 @@ footer {
 }
 
 section {
-  background-color: #f5f5f5; /* Light gray background color for sections */
-  border: 1px solid #e0e0e0; /* Light gray border around sections */
-  border-radius: 10px; /* Rounded corners for the sections */
-  padding: 2rem; /* Add padding to create spacing between content and border */
+  background-color: #f5f5f5;
+  border: 1px solid #e0e0e0;
+  border-radius: 0px;
+  padding: 2rem;
 }
