--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ nav a {
   color: #fff;
   font-size: 16px;
   padding: 10px 15px;
-  background-color: #69c391;
+  background-image: url('https://media.tarkett-image.com/large/TH_PROTECTWALL_Tisse_Light_Grey.jpg');
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
