--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #fff;
+  color: #7f7f7f;
   font-size: 16px;
   padding: 10px 15px;
   background-image: url('https://media.tarkett-image.com/large/TH_PROTECTWALL_Tisse_Light_Grey.jpg');
